--- a/environment.yml
+++ b/environment.yml
@@ -1,16 +1,17 @@
 # This file may be used to create an environment using:
 # conda env create -f environment.yml
-name: causeinfer-dev
+name: wikirepo-dev
 channels:
   - anaconda
   - conda-forge
   - defaults
+
+# Also needs wikidata
 dependencies:
   - numpy
   - scipy
   - pandas
   - matplotlib
   - seaborn
-  - wikidata
   - python-dateutil
   - tqdm
