--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,100 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
 appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==20.3.0
+backcall==0.2.0
 black==19.10b0
+bleach==3.3.0
 certifi==2020.12.5
+cffi==1.14.5
 click==7.1.2
+coverage==5.4
 cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.16
+entrypoints==0.3
 importlib-metadata==2.0.0
 iniconfig==1.1.1
+ipykernel==5.3.4
+ipython==7.10.0
+ipython-genutils==0.2.0
+jedi==0.17.2
+Jinja2==2.11.3
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.7.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab-pygments==0.1.2
+keyring==22.0.1
 kiwisolver==1.3.1
+lxml==4.6.2
+MarkupSafe==1.1.1
 matplotlib==3.3.2
+mistune==0.8.4
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 more-itertools==8.6.0
 mypy-extensions==0.4.3
+nb-conda-kernels==2.3.1
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
 numpy==1.19.2
 olefile==0.46
 packaging==20.9
 pandas==1.2.1
+pandocfilters==1.4.3
+parso==0.7.0
 pathspec==0.7.0
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.1.0
 pip==20.3.3
 pluggy==0.13.1
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+ptyprocess==0.7.0
 py==1.10.0
+pycparser==2.20
+Pygments==2.7.4
 pyparsing==2.4.7
+pyrsistent==0.17.3
 pytest==6.2.2
+pytest-cov==2.11.1
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
+pyzmq==20.0.0
+readme-renderer==28.0
 regex==2020.11.13
 rfc3986==1.4.0
 scipy==1.5.2
 seaborn==0.11.1
+Send2Trash==1.5.0
 setuptools==52.0.0.post20210125
 six==1.15.0
+statsmodels==0.12.0
+terminado==0.9.2
+testpath==0.4.4
 toml==0.10.1
 tornado==6.1
-tqdm==4.56.0
+tqdm==4.56.1
+traitlets==5.0.5
 twine==3.3.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+wcwidth==0.2.5
+webencodings==0.5.1
 wheel==0.36.2
 Wikidata==0.7.0
 zipp==3.4.0
