--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,56 @@
+aiohttp==3.7.3
+aiohttp-cors==0.7.0
+aioredis==1.3.1
+alabaster==0.7.12
 appdirs==1.4.4
 appnope==0.1.2
 argon2-cffi==20.1.0
+astroid==2.5
 async-generator==1.10
+async-timeout==3.0.1
 attrs==20.3.0
+Babel==2.9.0
 backcall==0.2.0
 black==19.10b0
 bleach==3.3.0
+blessings==1.7
+brotlipy==0.7.0
+cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
+chardet==3.0.4
 click==7.1.2
-coverage==5.4
+cloudpickle==1.6.0
+cmarkgfm==0.4.2
+colorama==0.4.4
+colorful==0.5.4
+coverage==5.5
+cryptography==3.4.6
 cycler==0.10.0
+dask==2.19.0
 decorator==4.4.2
-defusedxml==0.6.0
+defusedxml==0.7.1
+distributed==2.19.0
 docutils==0.16
 entrypoints==0.3
+filelock==3.0.12
+future==0.18.2
+google-api-core==1.26.0
+google-auth==1.27.0
+googleapis-common-protos==1.52.0
+gpustat==0.6.0
+grpcio==1.35.0
+HeapDict==1.0.1
+hiredis==1.1.0
+idna==2.10
+imagesize==1.2.0
 importlib-metadata==2.0.0
 iniconfig==1.1.1
 ipykernel==5.3.4
-ipython==7.10.0
+ipython==7.21.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.7.0
 jedi==0.17.2
 Jinja2==2.11.3
 jsonschema==3.2.0
@@ -31,70 +62,113 @@ jupyter-highlight-selected-word==0.2.0
 jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
 jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 keyring==22.0.1
 kiwisolver==1.3.1
+lazy-object-proxy==1.5.2
 lxml==4.6.2
 MarkupSafe==1.1.1
 matplotlib==3.3.2
+mccabe==0.6.1
 mistune==0.8.4
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
+modin==0.8.3
 more-itertools==8.6.0
+msgpack==1.0.2
+multidict==5.1.0
 mypy-extensions==0.4.3
 nb-conda-kernels==2.3.1
-nbclient==0.5.2
+nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
 numpy==1.19.2
+nvidia-ml-py3==7.352.0
 olefile==0.46
+opencensus==0.7.12
+opencensus-context==0.1.2
 packaging==20.9
-pandas==1.2.1
+pandas==1.1.5
 pandocfilters==1.4.3
 parso==0.7.0
 pathspec==0.7.0
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.1.0
+Pillow==8.1.2
 pip==20.3.3
+pkginfo==1.7.0
 pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+protobuf==3.15.1
+psutil==5.8.0
 ptyprocess==0.7.0
 py==1.10.0
+py-spy==0.3.4
+pyarrow==1.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.7.4
+pylint==2.6.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
+PySocks==1.7.1
 pytest==6.2.2
 pytest-cov==2.11.1
 python-dateutil==2.8.1
 pytz==2021.1
 PyYAML==5.4.1
 pyzmq==20.0.0
+ray==1.2.0
 readme-renderer==28.0
+redis==3.5.3
 regex==2020.11.13
+requests==2.25.1
+requests-toolbelt==0.9.1
 rfc3986==1.4.0
+rope==0.18.0
+rsa==4.7.1
 scipy==1.5.2
 seaborn==0.11.1
 Send2Trash==1.5.0
 setuptools==52.0.0.post20210125
 six==1.15.0
-statsmodels==0.12.0
-terminado==0.9.2
+snowballstemmer==2.1.0
+sortedcontainers==2.3.0
+Sphinx==3.5.1
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+statsmodels==0.12.2
+tblib==1.7.0
+terminado==0.9.3
 testpath==0.4.4
 toml==0.10.1
+toolz==0.11.1
 tornado==6.1
 tqdm==4.56.1
 traitlets==5.0.5
 twine==3.3.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.36.2
+widgetsnbextension==3.5.1
 Wikidata==0.7.0
+wikirepo==0.1.0
+wrapt==1.12.1
+yarl==1.6.3
+zict==2.0.0
 zipp==3.4.0
