--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,8 @@ jobs:
       run: |
         eval "$(conda shell.bash hook)"
         conda activate wikirepo-dev
-        pytest --cov=wikirepo tests --cov-report=xml
+        export PYTHONPATH="./src"
+        pytest --cov=src tests --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
