--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+black==19.10b0
 certifi==2020.12.5
 numpy==1.19.2
 packaging==20.9
 pandas==1.1.5
-pylint==2.6.0
 pyOpenSSL==20.0.1
 pytest==6.2.2
 pytest-cov==2.11.1
