--- a/environment.yml
+++ b/environment.yml
@@ -4,15 +4,15 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - black=19.10b0
-  - certifi=2020.12.5
-  - numpy=1.19.2
-  - packaging=20.9
-  - pandas==1.1.5
-  - pyopenssl=20.0.1
-  - pytest=6.2.2
-  - pytest-cov=2.11.1
+  - black>=19.10b0
+  - certifi>=2020.12.5
+  - numpy>=1.19.2
+  - packaging>=20.9
+  - pandas>=1.1.5
+  - pyopenssl>=20.0.1
+  - pytest>=6.2.2
+  - pytest-cov>=2.11.1
   - python>=3.6
-  - tqdm=4.56.0
+  - tqdm>=4.56.0
   - pip:
-    - wikidata==0.7.0
+    - wikidata>=0.7.0
