--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-black==19.10b0
-certifi==2020.12.5
-numpy==1.19.2
-packaging==20.9
-pandas==1.1.5
-pyOpenSSL==20.0.1
-pytest==6.2.2
-pytest-cov==2.11.1
-tqdm==4.56.1
-Wikidata==0.7.0
+black>=19.10b0
+certifi>=2020.12.5
+numpy>=1.19.2
+packaging>=20.9
+pandas>=1.1.5
+pyOpenSSL>=20.0.1
+pytest>=6.2.2
+pytest-cov>=2.11.1
+tqdm>=4.56.1
+Wikidata>=0.7.0
